welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  faireL(1,true)
}





def faireL (x: Int, sens: Boolean){
   x match {
    case 1 => setCouleurBrosse(Color.red)
    case 2 => setCouleurBrosse(Color.blue)
    case 3 => setCouleurBrosse(Color.yellow)
    case 4 => setCouleurBrosse(Color.green)
   }
  
	if (sens){
    avance()
    baisseBrosse()
    gauche()
    leveBrosse()
    avance()
    gauche()
    baisseBrosse()
    avance()
    gauche()    
  }
  else {
    
  }